traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:1: error: illegal start of simple expression
override def run() {baisseBrosse();while (0)var y=0; {if (estFaceMur() && y==0){gauche();avance();gauche();y=y+1};if(estFaceMur()&& y==1){droite;avance;droite;y=y-1};else {avance()}};baisseBrosse()
                                            ^